# cairo-dependencies-graph

./: .gitignore  README.md  graph.gv  pyproject.toml
src/: cli.py  logic.py
src/cairo_dependencies_graph/: import_parser.py
tests/: test_main.cairo
