[tool.poetry]
name = "cairo-dependencies-graph"
version = "0.1.0"
description = "Visualize your cairo dependencies as a graph"
authors = ["msaug <msaug@protonmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cairo_dependencies_graph", from = "src"},{include="src"}]

[tool.poetry.dependencies]
python = "^3.9"
cairo-lang = "^0.10.0"
toml = "0.10.2"
click = "8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cairo-dependencies-graph = 'src.cli:main'